k8s/kyverno/disallow-privilege-escalation.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-privilege-escalation
  annotations:
    policies.kyverno.io/title: Disallow Privilege Escalation
    policies.kyverno.io/category: Pod Security Standards (Restricted)
    policies.kyverno.io/severity: high
    policies.kyverno.io/description: >-
      Privilege escalation allows a process to gain more privileges than its parent process.
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: check-privilege-escalation
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - genyxo
                - genyxo-staging
                - genyxo-production
      validate:
        message: "Privilege escalation is disallowed. Container securityContext must set allowPrivilegeEscalation: false."
        pattern:
          spec:
            containers:
              - securityContext:
                  allowPrivilegeEscalation: false
